fixed about on mobile

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -419,7 +419,7 @@ header {
     background-image: url(../../img/background.jpg); //url(../../img/background-grey.jpg);
     filter: grayscale(100%);
     color: #222;
-    height: 100%;
+    min-height: 100%;
     a {
         font-size: 2em;
         i{.transition-short;}
